--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hyperware-ai/client-api",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Client-side library for handling websockets, encryption, and decryption from a Hyperware node",
   "main": "index.js",
   "types": "index.d.ts",
@@ -21,11 +21,11 @@
   "homepage": "https://github.com/hyperware-ai/client-encryptor#readme",
   "dependencies": {
     "buffer": "^6.0.3",
-    "node-forge": "^1.3.1",
-    "typescript": "^4.9.5"
+    "node-forge": "^1.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.8.2",
-    "@types/node-forge": "^1.3.11"
+    "@types/node-forge": "^1.3.11",
+    "typescript": "^4.9.5"
   }
 }
